Fix flickering of sticky headers on hover of elements with transition
A trick to use GPU acceleration by using translateZ with no effect.

--- a/modules/ui/styles/mw.cx.ui.ToolsColumn.less
+++ b/modules/ui/styles/mw.cx.ui.ToolsColumn.less
@@ -12,6 +12,10 @@
 	position: sticky;
 	top: 20px;
 
+	/* Force the browser to use hardware acceleration to access
+	 the device’s GPU so that sticky transitions are smooth and avoid flickering */
+	transform: translateZ( 0 );
+
 	&.sticky {
 		position: fixed;
 		top: 20px;
